2009-12-15  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Cannot load flash files from a local file.
        https://bugs.webkit.org/show_bug.cgi?id=32572

        When loading the main resource and its mime type is application/octet-stream,
        use the file extenstion to check if it is a supported plugin.

        No new tests were added since any existing swf file can be used as a manual test.

        * loader/MainResourceLoader.cpp:
        (WebCore::MainResourceLoader::didReceiveResponse):
        * loader/MainResourceLoader.h:
        * plugins/PluginDatabase.h:

Canonical link: https://commits.webkit.org/43596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52172 268f45cc-cd09-0410-ab3c-d52691b4dbfc